# eggthony

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  GEMINI.md  README.md  RL_GUIDE.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
backend/: package-lock.json  package.json  wrangler.toml
backend/src/: index.js
data/sounds/: Bad - Freakin dilbert.m4a  Boss_eat_trimmed.m4a  Win — let’s freaking go boys.m4a
public/data/sounds/: Good - bobert mcdoobenger.m4a  Good - hammanado.m4a  Lose - eh maybe next time.m4a  Snot rocket launch.m4a  Snot rocket sniffle.m4a  Snot rocket trimmed.m4a  Snot rocket.m4a  Start game trimmed.m4a  Start game — let’s freakin do this.m4a  dean_jam.m4a  dwyer.m4a  eager_chris.m4a  music.m4a  quentin_fart_trimmed.m4a
public/data/sounds/dean/: dean_jam.m4a
public/data/sounds/will/: will_1.m4a  will_2.m4a  will_3.m4a  will_4.m4a
rl/: bridge.js  diagnose.py  eggthony_env.py  eggthony_env_v8.py  train.py  watch.py
src/: ai-bridge.js  audio.js  boss.js  constants.js  effects.js  enemies.js  gear.js  gear_catalog.json  headless.js  input.js  main.js  node-shims.js  player.js  powerups.js  rng.js  screens.js  simulation.js  sprites.js  state.js  utils.js  waves.js  weapons.js  world.js
tools/: gear_editor.html  sprite_gen.py
